--- a/stream_data/src/.env
+++ b/stream_data/src/.env
@@ -2,7 +2,7 @@ DBREPO_RABBITMQ_BROKER_URL=128.130.202.19
 DBREPO_RABBITMQ_BROKER_PORT=5672
 DBREPO_HTTP_URL=https://dbrepo.ossdip.at
 
-AIRQUALITY_DBREPO_USERNAME=jtaha
-AIRQULAITY_DBREPO_PASSWORD=pw
+AIRQUALITY_DBREPO_USERNAME= #TODO: insert dbrepo username
+AIRQULAITY_DBREPO_PASSWORD= #TODO: insert dbrepo password
 AIRQULAITY_DBREPO_DB_NAME=AirQuality
 AIRQUALITY_DBREPO_DB_DESCRIPTION=This database contains real-time airquality data from 170 stations in Austria || Data-Source: luft.umweltbundesamt.at
